--- a/public/angular-frontend/src/app/app-main/components/row/row.component.html
+++ b/public/angular-frontend/src/app/app-main/components/row/row.component.html
@@ -1,4 +1,5 @@
-<div class="row">
-    <div class="header"></div>
+<div id="main-row">
+    <div id="main-row-header"></div>
+    <div id="main-row-square"></div>
     <!-- Room for divs -->
 </div>
