--- a/public/src/app/app-main/components/input/input.component.html
+++ b/public/src/app/app-main/components/input/input.component.html
@@ -1,7 +1,7 @@
 <app-row></app-row>
 <label>Twoje liczby</label>
 
-<!--  numbers of inputs above will depend on user chose from 1-10 like in game -->
+<!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
 <input type="text" [(ngModel)]="nr1" maxlength="2">
 <input type="text" [(ngModel)]="nr2" maxlength="2">
 <input type="text" [(ngModel)]="nr3" maxlength="2">
