--- a/public/src/app/app-main/app-main.component.html
+++ b/public/src/app/app-main/app-main.component.html
@@ -1,2 +1,4 @@
-<div draws id="host" class="container-lg"></div>
+<div draws id="host" class="container-fluid">
+    <!-- Table goes here -->
+</div>
 <app-input></app-input>
