--- a/public/src/app/footer/footer.component.html
+++ b/public/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<div class="footer navbar-fixed-bottom">Author: <a href="https://grzegorzdryja.github.io">GD</a></div>
+<footer class="page-footer">
+    <div class="footer text-center">
+        Author: <a href="https://grzegorzdryja.github.io">GD</a>
+    </div>
+</footer>
