--- a/public/src/app/header/app-header.component.css
+++ b/public/src/app/header/app-header.component.css
@@ -1,5 +1,4 @@
-header {
-    padding: 1.5em;
-    background-color: blanchedalmond;
-    border-left: solid 0.5em burlywood;
-  }
+nav {
+  padding: 0px 15px 0px 15px;
+
+}
