--- a/public/src/app/app-main/input/input.component.html
+++ b/public/src/app/app-main/input/input.component.html
@@ -1,13 +1,24 @@
-<app-row></app-row>
-<label>Twoje liczby</label>
+<div class="panel panel-info">
+      <div class="panel-heading">
+            <h3 class="panel-title">Input handler</h3>         
+            
+        </div>
+        <div class="panel-body">
+            <app-row></app-row>
+            <label>Your numbers</label>
+            
+            <!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
+            <input type="text" [(ngModel)]="nr1" maxlength="2">
+            <input type="text" [(ngModel)]="nr2" maxlength="2">
+            <input type="text" [(ngModel)]="nr3" maxlength="2">
+            <input type="text" [(ngModel)]="nr4" maxlength="2">
+            <input type="text" [(ngModel)]="nr5" maxlength="2">
+            
+            <p>{{ nr1 }}, {{ nr2 }}, {{ nr3 }}, {{ nr4 }}, {{ nr5 }}</p>
+            
+            <button (click)="checkDraws(nr1, nr2, nr3, nr4, nr5)">Sprawdź</button>
+           
+      </div>
+</div>
 
-<!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
-<input type="text" [(ngModel)]="nr1" maxlength="2">
-<input type="text" [(ngModel)]="nr2" maxlength="2">
-<input type="text" [(ngModel)]="nr3" maxlength="2">
-<input type="text" [(ngModel)]="nr4" maxlength="2">
-<input type="text" [(ngModel)]="nr5" maxlength="2">
 
-<p>{{ nr1 }}, {{ nr2 }}, {{ nr3 }}, {{ nr4 }}, {{ nr5 }}</p>
-
-<button (click)="checkDraws(nr1, nr2, nr3, nr4, nr5)">Sprawdź</button>
