Declutter and RouterContext

--- a/public/src/app/app-main/app-main.component.html
+++ b/public/src/app/app-main/app-main.component.html
@@ -1,5 +1,6 @@
-<div draws id="host" class="container-fluid">
-    <!-- Table goes here -->
-</div>
+<!-- <div draws id="host" class="container-fluid">
+// Table goes here 
+</div> -->
+<draws></draws>
 <app-input></app-input>
 <app-output></app-output>
