--- a/public/src/app/app-main/draws/draws.component.html
+++ b/public/src/app/app-main/draws/draws.component.html
@@ -1,8 +1,15 @@
-<table>
-    <tr>
-        <td *ngFor="let header of headers">{{ header }}</td>
-    </tr>
-    <tr>
-        <td *ngFor="let draw of arrayOfDraws">{{ draw }}</td>
-    </tr>
-</table>
+<div class="panel panel-warning">
+    <div class="panel-heading">
+      <h3 class="panel-title">Last draw</h3>
+    </div>
+    <div class="panel-body">
+      <table>
+        <tr>
+          <td *ngFor="let header of headers">{{ header }}</td>
+        </tr>
+        <tr>
+          <td *ngFor="let draw of arrayOfDraws">{{ draw }}</td>
+        </tr>
+      </table>
+    </div>
+</div>
