--- a/public/src/app/app-main/input/input.component.html
+++ b/public/src/app/app-main/input/input.component.html
@@ -1,29 +1,26 @@
 <div class="panel panel-info">
-      <div class="panel-heading">
-            <h3 class="panel-title">Input handler</h3>         
-            
-        </div>
-        <div class="panel-body">
-            <app-row></app-row>
-            <label>Your numbers</label>
-            
-            <!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
-            <input type="text" [(ngModel)]="nr1" maxlength="2">
-            <input type="text" [(ngModel)]="nr2" maxlength="2">
-            <input type="text" [(ngModel)]="nr3" maxlength="2">
-            <input type="text" [(ngModel)]="nr4" maxlength="2">
-            <input type="text" [(ngModel)]="nr5" maxlength="2">
-            <input type="text" [(ngModel)]="nr6" maxlength="2">
-            <input type="text" [(ngModel)]="nr7" maxlength="2">
-            <input type="text" [(ngModel)]="nr8" maxlength="2">
-            <input type="text" [(ngModel)]="nr9" maxlength="2">
-            <input type="text" [(ngModel)]="nr10" maxlength="2">
-            
-            <p>{{ nr1 }}, {{ nr2 }}, {{ nr3 }}, {{ nr4 }}, {{ nr5 }}, {{ nr6 }}, {{ nr7 }}, {{ nr8 }}, {{ nr9 }}, {{ nr10 }}</p>
-            
-            <button class="btn btn-info" (click)="checkDraws()">Check</button>
-           
-      </div>
+  <div class="panel-heading">
+        <h3 class="panel-title">Check numbers:</h3>         
+  </div>
+    <div class="panel-body">
+      <app-row></app-row>
+      <label>Your numbers</label>
+      
+      <!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
+      <input type="text" [(ngModel)]="nr1" maxlength="2">
+      <input type="text" [(ngModel)]="nr2" maxlength="2">
+      <input type="text" [(ngModel)]="nr3" maxlength="2">
+      <input type="text" [(ngModel)]="nr4" maxlength="2">
+      <input type="text" [(ngModel)]="nr5" maxlength="2">
+      <input type="text" [(ngModel)]="nr6" maxlength="2">
+      <input type="text" [(ngModel)]="nr7" maxlength="2">
+      <input type="text" [(ngModel)]="nr8" maxlength="2">
+      <input type="text" [(ngModel)]="nr9" maxlength="2">
+      <input type="text" [(ngModel)]="nr10" maxlength="2">
+      
+      <p>{{ nr1 }}, {{ nr2 }}, {{ nr3 }}, {{ nr4 }}, {{ nr5 }}, {{ nr6 }}, {{ nr7 }}, {{ nr8 }}, {{ nr9 }}, {{ nr10 }}</p>
+      
+      <button class="btn btn-info" (click)="checkDraws()">Check</button>
+      <button class="btn btn-info" (click)="saveNumbers()">Save</button>      
+  </div>
 </div>
-
-
