Table and 10 numbers

--- a/public/src/app/app-main/draws/draws.component.html
+++ b/public/src/app/app-main/draws/draws.component.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
       <table>
         <tr>
-          <td *ngFor="let header of headers">{{ header }}</td>
+          <th *ngFor="let header of headers">{{ header }}</th>
         </tr>
         <tr>
           <td *ngFor="let draw of arrayOfDraws">{{ draw }}</td>
