--- a/public/src/app/app-main/input/input.component.html
+++ b/public/src/app/app-main/input/input.component.html
@@ -3,7 +3,7 @@
         <h3 class="panel-title">Check numbers:</h3>         
   </div>
     <div class="panel-body">
-      <app-row></app-row>
+      <!-- <app-row></app-row> -->
       <label>Your numbers</label>
       
       <!--  numbers of inputs below will depend on user chose from 1-10 like in game -->
