--- a/public/src/app/app-main/app-main.component.html
+++ b/public/src/app/app-main/app-main.component.html
@@ -1,5 +1,5 @@
 
 <draws></draws>
-<app-input></app-input>
+<app-input (numbersChecked)="showWins($event)"></app-input>
 <app-output></app-output>
 <app-numbers></app-numbers>
