--- a/public/src/app/app-main/app-main.component.html
+++ b/public/src/app/app-main/app-main.component.html
@@ -1,5 +1,6 @@
 
 <draws></draws>
 <app-input (numbersChecked)="showWins($event)"></app-input>
+<app-row></app-row>
 <app-output></app-output>
 <app-numbers></app-numbers>
