--- a/public/src/app/app-main/draws/draws.component.html
+++ b/public/src/app/app-main/draws/draws.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-warning">
     <div class="panel-heading">
-      <h3 class="panel-title">Last draw</h3>
+      <h3 class="panel-title">Table:</h3>
     </div>
     <div class="panel-body">
       <table>
