--- a/public/src/app/app-main/row/row.component.html
+++ b/public/src/app/app-main/row/row.component.html
@@ -1,4 +1,11 @@
-<div class="row" id="main-row">
-    <div class="col-xs-20 header">Chose your numbers:</div> 
-    <!-- Room for divs -->
+<div class="panel panel-info">
+    <div class="panel-heading">
+      <h3 class="panel-title">Matrix:</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row" id="main-row">
+            <div class="col-xs-20 header">Last draw:</div> 
+            <!-- Room for divs -->
+        </div>
+    </div>
 </div>
