--- a/public/src/app/components/app-main/app-main.component.html
+++ b/public/src/app/components/app-main/app-main.component.html
@@ -2,7 +2,7 @@
   [headers]="headers"
   [arrayOfDrawnNumbers]="arrayOfDrawnNumbers">
 </draws>
-<app-row></app-row>
-<app-input (numbersChecked)="showWins($event)"></app-input>
+<!-- <app-row></app-row> -->
+<app-input></app-input>
 <app-output></app-output>
-<app-numbers></app-numbers>
+<!-- <app-numbers></app-numbers> -->
