Setting up httpService

--- a/public/src/app/components/app-main/input/input.component.html
+++ b/public/src/app/components/app-main/input/input.component.html
@@ -4,18 +4,17 @@
   </div>
     <div class="panel-body">
       <form (ngSubmit)="checkDraws()">
-        <input type="text" [(ngModel)]="num0" name="num0">
-        <input type="text" [(ngModel)]="num1" name="num1">
-        <input type="text" [(ngModel)]="num2" name="num2">
-        <input type="text" [(ngModel)]="num3" name="num3">
-        <input type="text" [(ngModel)]="num4" name="num4">
-        <input type="text" [(ngModel)]="num5" name="num5">
-        <input type="text" [(ngModel)]="num6" name="num6">
-        <input type="text" [(ngModel)]="num7" name="num7">
-        <input type="text" [(ngModel)]="num8" name="num8">
-        <input type="text" [(ngModel)]="num9" name="num9">
+        <input type="number" [(ngModel)]="lots.number0" name="num0">
+        <input type="number" [(ngModel)]="lots.number1" name="num1">
+        <input type="number" [(ngModel)]="lots.number2" name="num2">
+        <input type="number" [(ngModel)]="lots.number3" name="num3">
+        <input type="number" [(ngModel)]="lots.number4" name="num4">
+        <input type="number" [(ngModel)]="lots.number5" name="num5">
+        <input type="number" [(ngModel)]="lots.number6" name="num6">
+        <input type="number" [(ngModel)]="lots.number7" name="num7">
+        <input type="number" [(ngModel)]="lots.number8" name="num8">
+        <input type="number" [(ngModel)]="lots.number9" name="num9">
         <input type="submit" value="Check">
-      </form>
-      
+      </form>      
   </div>
 </div>
