Tabel component as a reusable one and new html architecture
Ned some fix, there is only first draw

--- a/public/src/app/components/app-main/app-main.component.html
+++ b/public/src/app/components/app-main/app-main.component.html
@@ -1,8 +1,29 @@
-<draws 
-  [headers]="headers"
-  [arrayOfDrawnNumbers]="arrayOfDrawnNumbers">
-</draws>
+<div class="panel panel-warning">
+  <div class="panel-heading">
+    <h3 class="panel-title">Table:</h3>
+  </div>
+  <div class="panel-body">
+    <app-table 
+      [headers]="headers"
+      [arrayOfDrawnNumbers]="arrayOfDrawnNumbers">
+    </app-table>
+  </div>
+</div>
 <!-- <app-row></app-row> -->
-<app-input></app-input>
-<app-output></app-output>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Check numbers:</h3>         
+  </div>
+  <div class="panel-body">
+    <app-input></app-input>
+  </div>
+</div>
+<div class="panel panel-success">
+	<div class="panel-heading">
+		<h3 class="panel-title">Wins!</h3>				
+	</div>
+	<div class="panel-body">
+    <app-output></app-output>
+  </div>
+</div>
 <!-- <app-numbers></app-numbers> -->
