--- a/public/src/app/components/app-main/app-table/app-table.component.css
+++ b/public/src/app/components/app-main/app-table/app-table.component.css
@@ -1,7 +1,7 @@
 table, tr, td, th {
     border: 1px;
     border-style: solid;
-    padding: 10px 10px 10px 10px;
+    padding: 0.5em;
 }
 td {
     text-align: center;
