--- a/public/src/app/components/app-main/wins/output.component.html
+++ b/public/src/app/components/app-main/wins/output.component.html
@@ -1,8 +1,4 @@
-<div class="panel panel-success">
-	<div class="panel-heading">
-		<h3 class="panel-title">Wins!</h3>				
-	</div>
-	<div class="panel-body">
-		<p *ngFor="let el of draws">{{ el }}</p>
-	</div>
-</div>
+<app-table 
+    [headers]="winHeaders"
+    [arrayOfDrawnNumbers]="winNumbers">
+</app-table>
