Some input work for better look

--- a/public/src/app/components/app-main/app-main.component.html
+++ b/public/src/app/components/app-main/app-main.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-warning">
   <div class="panel-heading">
-    <h3 class="panel-title">Table:</h3>
+    <h3 class="panel-title">Last draws:</h3>
   </div>
   <div class="panel-body">
     <app-table 
@@ -9,7 +9,6 @@
     </app-table>
   </div>
 </div>
-<!-- <app-row></app-row> -->
 <div class="panel panel-info">
   <div class="panel-heading">
     <h3 class="panel-title">Check numbers:</h3>         
@@ -26,4 +25,3 @@
     <app-output></app-output>
   </div>
 </div>
-<!-- <app-numbers></app-numbers> -->
