--- a/public/src/app/components/app-main/input/input.component.html
+++ b/public/src/app/components/app-main/input/input.component.html
@@ -1,13 +1,13 @@
 <form (ngSubmit)="checkDraws()">
-  <input type="number" [(ngModel)]="lots.number0" name="num0" min="1" max="80"> 
-  <input type="number" [(ngModel)]="lots.number1" name="num1" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number2" name="num2" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number3" name="num3" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number4" name="num4" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number5" name="num5" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number6" name="num6" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number7" name="num7" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number8" name="num8" min="1" max="80">
-  <input type="number" [(ngModel)]="lots.number9" name="num9" min="1" max="80">
+  <input type="number" [(ngModel)]="lots.number0" name="num0" size="2"> 
+  <input type="number" [(ngModel)]="lots.number1" name="num1" size="2">
+  <input type="number" [(ngModel)]="lots.number2" name="num2" size="2">
+  <input type="number" [(ngModel)]="lots.number3" name="num3" size="2">
+  <input type="number" [(ngModel)]="lots.number4" name="num4" size="2">
+  <input type="number" [(ngModel)]="lots.number5" name="num5" size="2">
+  <input type="number" [(ngModel)]="lots.number6" name="num6" size="2">
+  <input type="number" [(ngModel)]="lots.number7" name="num7" size="2">
+  <input type="number" [(ngModel)]="lots.number8" name="num8" size="2">
+  <input type="number" [(ngModel)]="lots.number9" name="num9" size="2">
   <input type="submit" value="Check">
 </form>
