--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 <!-- <app-login></app-login> -->
 <app-main></app-main>
 <!-- <app-footer></app-footer> -->
