--- a/public/src/app/components/header/app-header.component.html
+++ b/public/src/app/components/header/app-header.component.html
@@ -8,8 +8,9 @@
         </span>
     </a>
 
-    <div class="nav navbar-nav navbar-right">
+    <div class="nav navbar-nav navbar-right">        
         <fa-icon [icon]="faTrophy"></fa-icon>
+        <app-notification-label></app-notification-label>
     </div>
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
