--- a/public/src/app/components/header/app-header.component.html
+++ b/public/src/app/components/header/app-header.component.html
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li class="active">
-                <a routerLink="#">About page</a>
+                <a routerLink="about">About the App</a>
             </li>
             <li>
-                <a routerLink="#">Author</a>
+                <a routerLink="author">Author</a>
             </li>
         </ul>
     </div>
