--- a/public/src/app/components/pages/about-page/about-page.component.html
+++ b/public/src/app/components/pages/about-page/about-page.component.html
@@ -3,4 +3,4 @@
     The win result will be shown in a table and in small notification label on trophy icon.
 </p>
 
-<fa-icon [icon]="faAngular" font-size="10em" color="red"></fa-icon>
+<fa-icon [icon]="faAngular"></fa-icon>
