--- a/public/src/app/components/header/app-header.component.css
+++ b/public/src/app/components/header/app-header.component.css
@@ -1,16 +1,18 @@
-nav {
-  padding: 0px 15px 0px 15px;
+/* .navbar {
+  padding: 0em 1em 0em 1em;
 }
-
+*/
 .logo {
-  font-size: 1em;
-  float: right;
-  margin-left: 4em;
-  padding-right: 1em 
+  font-size: 2em;
+  color: gray;
 }
 
 fa-icon {
-  font-size: 3em;
+  font-size: 2em;
   color: gray;
-  position: absolute;
+  float: left;
+}
+
+.trophy {
+  font-size: 3em;
 }
