--- a/public/src/app/components/pages/author/author.component.html
+++ b/public/src/app/components/pages/author/author.component.html
@@ -1,6 +1,7 @@
-<p>Hi there, feel free to check my homepage -->
-    <a href="https://grzegorzdryja.github.io" target="_blank">
-        <fa-icon [icon]="faLaptopCode" font-size="2em" color="gray"></fa-icon>
-    </a>
-</p>
-<fa-icon [icon]="faAngular" font-size="4em"></fa-icon>
+<div class="container">
+    <p>Hi there, feel free to check my homepage -->
+        <a href="https://grzegorzdryja.github.io" target="_blank">
+            <fa-icon [icon]="faLaptopCode"></fa-icon>
+        </a>
+    </p>
+</div>
