--- a/public/src/app/components/app-main/app-main.component.html
+++ b/public/src/app/components/app-main/app-main.component.html
@@ -1,27 +1,17 @@
-<div class="panel panel-warning">
-  <div class="panel-heading">
-    <h3 class="panel-title">Last draws:</h3>
-  </div>
-  <div class="panel-body">
+<div class="alert alert-info"> 
+    <h3>Last draws:</h3>
     <app-table 
       [headers]="headers"
       [arrayOfDrawnNumbers]="arrayOfDrawnNumbers">
-    </app-table>
-  </div>
+      </app-table>
 </div>
-<div class="panel panel-info">
-  <div class="panel-heading">
-    <h3 class="panel-title">Check numbers:</h3>         
-  </div>
-  <div class="panel-body">
+
+<div class="alert alert-primary">
+    <h3>Check numbers:</h3>
     <app-input></app-input>
-  </div>
 </div>
-<div class="panel panel-success">
-	<div class="panel-heading">
-		<h3 class="panel-title">Wins!</h3>				
-	</div>
-	<div class="panel-body">
+
+<div class="alert alert-success"> 
+    <h3>Wins!</h3>   
     <app-output></app-output>
-  </div>
 </div>
